Fixed bug with settings menu overflowing on firefox

--- a/src/core/settings.pcss
+++ b/src/core/settings.pcss
@@ -157,6 +157,7 @@
   display: flex;
   flex-grow: 1;
   align-items: stretch;
+  min-height: 0;
 }
 
 .akun-x-settings-module-list {
